feat: expose net SML stock availability
